Fixed some layout issues for the treasure hunt component. I also added auto scrolling to bottom when the text area gets filled.

--- a/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.css
+++ b/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.css
@@ -1,9 +1,8 @@
-textarea:hover {
-    cursor: default;
-}
-
 main {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 nav {
@@ -28,6 +27,10 @@ textarea:focus {
     outline: none;
 }
 
+textarea:hover {
+    cursor: default;
+}
+
 aside {
     display: flex;
     flex-wrap: wrap;
@@ -48,5 +51,5 @@ aside {
 
 .player {
     position: absolute;
-    left: 126px;
+    left: 168px;
 }
